--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <meta name="description" content="재미있는 짤을 공유해요!" />
-    <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests">
+    <!-- <meta http-equiv="Content-Security-Policy" content="upgrade-insecure-requests"> -->
     <meta property="og:title" content="JJal:: 짤을 공유해!" />
     <meta property="og:type" content="website" />
     <meta property="og:url" content="https://jjal-c84eb.web.app/" />
